# japanese_law_xml_schema

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml
src/: appdx.rs  article.rs  article_number.rs  class.rs  contents.rs  fig.rs  law.rs  lib.rs  line.rs  list.rs  paragraph.rs  parse_from_text.rs  parser.rs  remarks.rs  result.rs  sentence.rs  structs.rs  suppl_provision.rs  table.rs  table_of_contents.rs  text.rs  to_xml.rs  utils.rs
src/tests/: parse.rs  write.rs
