[package]
name = "japanese_law_xml_schema"
version = "0.1.0"
edition = "2021"
rust-version = "1.60.0"
license = "MIT"
authors = ["Naoki Kaneko a.k.a. puripuri2100"]
repository = "https://github.com/japanese-law-analysis/japanese_law_xml_schema.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.19.0"
serde = { version = "1.0.192", features = ["derive"] }
thiserror = "1.0.56"
