[package]
name = "japanese_law_xml_schema"
description = "法令標準XMLスキーマ対応ライブラリ"
version = "5.3.1"
edition = "2021"
rust-version = "1.65.0"
license = "MIT"
authors = ["Naoki Kaneko a.k.a. puripuri2100"]
repository = "https://github.com/japanese-law-analysis/japanese_law_xml_schema.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kansuji = "0.1.1"
koyomi = "0.4.0"
regex = "1.10.4"
roman = "0.1.6"
serde = { version = "1.0.201", features = ["derive"] }
thiserror = "1.0.60"
xmltree = "0.10.3"
